# android_analysis

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/dlfc/: dlfcn_nougat.cpp  dlfcn_nougat.h
app/src/main/cpp/export_jni/: test_jni.cpp
app/src/main/cpp/hook_jni/: enum_jni_static_method.cpp  jni_env_hook.cpp  jni_native_hook.cpp  parse_java_sig.cpp  printf_args_helper.cpp  printf_java_args.cpp
app/src/main/cpp/hook_libc/: libc_hook_export.h  only_watch.cpp
app/src/main/cpp/hook_ssl/: main.cpp
app/src/main/cpp/inject_capture/: main.cpp
app/src/main/cpp/libxhook/: xh_jni.c
app/src/main/cpp/route_func/: printf_args_helper.cpp  printf_java_args.cpp  route_func.cpp  route_func.h
app/src/main/cpp/route_func/asm64/: hooking64.asm  route_arm64.asm
app/src/main/cpp/sniffer/: CMakeLists.txt  sniffer.cpp
app/src/main/cpp/system_hook/: system_hook.cpp  system_hook.h
app/src/main/cpp/test/: main.cpp
app/src/main/cpp/test_jni/: main.cpp
app/src/main/cpp/utils/: jni_helper.cpp  jni_helper.h  log.cpp  log.h  utils.cpp  utils.h
app/src/main/java/com/caller/: MainActivity.java  analyse_test.java  test_jni.java
app/src/main/java/com/plug/base/: plug_config.java
app/src/main/java/com/plug/export/: frida_helper.java
app/src/main/java/com/plug/xposed/: xposed_sub_plug_loader.java
app/src/main/java/com/plug/xposed/app_sub_plug/: sub_plug_work.java
app/src/main/java/com/plug/xposed/base/: xposed_plug_common.java
app/src/main/java/com/plug/xposed/tool/: tool_bugly_analyse.java  tool_fangtianxia.java  tool_inject_jar.java  tool_socket_analyse.java
app/src/main/java/com/units/: config.java
app/src/main/res/layout/: activity_main.xml
